resolve merge conflicts and reapply codestyle